[gd_scene load_steps=4 format=3 uid="uid://b4bsddkt71vf8"]

[ext_resource type="Script" path="res://user_interface/main_canvas/upgrade_stats_menu/upgrade_stats_menu.gd" id="1_4wlrb"]
[ext_resource type="PackedScene" uid="uid://ds8nqgeovl5ny" path="res://user_interface/main_canvas/upgrade_stats_menu/upgrade_stats_tab.tscn" id="2_3h8qe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ufjtm"]
bg_color = Color(0.211765, 0.223529, 0.243137, 0.803922)

[node name="UpgradeStatsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4wlrb")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.195774, 0.173633, 0.2711, 1)

[node name="TopPart" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="TopPart"]
layout_mode = 2

[node name="Label" type="Label" parent="TopPart/CenterContainer"]
layout_mode = 2
text = "Level up menu"

[node name="VBox" type="VBoxContainer" parent="TopPart"]
layout_mode = 2

[node name="HBox1" type="HBoxContainer" parent="TopPart/VBox"]
layout_mode = 2

[node name="Control" type="Control" parent="TopPart/VBox/HBox1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExitButton" type="Button" parent="TopPart/VBox/HBox1"]
layout_mode = 2
text = "Return"
metadata/_edit_use_anchors_ = true

[node name="line" type="ColorRect" parent="TopPart/VBox"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
color = Color(0.431373, 0.431373, 0.431373, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ufjtm")
current_tab = 0

[node name="UpgradeStatsTab" parent="MarginContainer/TabContainer" instance=ExtResource("2_3h8qe")]
layout_mode = 2
metadata/_tab_index = 0

[node name="UpgradeStatsTab2" parent="MarginContainer/TabContainer" instance=ExtResource("2_3h8qe")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="UpgradeStatsTab3" parent="MarginContainer/TabContainer" instance=ExtResource("2_3h8qe")]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[connection signal="pressed" from="TopPart/VBox/HBox1/ExitButton" to="." method="_on_exit_button_pressed"]
